# bw

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.marscode/: deviceInfo.json
book/: __init__.py  add_book.py  age.py  common.py  epub.py  parse.py  pdf.py  persons.yaml
dev/: CLAUDE.md  README.txt  _retrieve_photos.py  _search.py
dev/_syllabus/: design.md
dev/anna/: entitie_relation.md  entity.py  nentropy_in.md
dev/book/: __init__.py  epub.md  epub.py  parse.md  parse.py  parse_results.txt  persons.md  persons.yaml
dev/db/: _demo.py  demo.py
dev/download/: indexing.md  sample_torrents.py
dev/ocr/: __init__.py  main.py
dev/search/: __init__.py  main.py
dev/torrents/: main.py  package.json  parse.js
dev/ui/: server.py  ui.md
dev/ui/nextjs/: next.config.js
dev/ui/nextjs/app/: page.js
dev/utils/: __init__.py  llm.py  llm.txt  retrieve_photos.md
dev/web/: __init__.py  main.py  search.py
persons/: CLAUDE.md  __init__.py  main.py
search/: persons.py
ui/: server.py
ui/nextjs/: .gitignore  package.json
ui/nextjs/app/: globals.css  layout.js
