[project]
name = "bw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lmdb>=1.7.5",
    "openai>=2.9.0",
    "pdfminer-six>=20251107",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "surrealdb>=1.0.7",
    "torrentool>=1.2.0",
    "watchdog>=6.0.0",
]
